Updates to figures, model for co-occurrence

--- a/Aim2/code/Python/03c_viirs-afd-processing.ipynb
+++ b/Aim2/code/Python/03c_viirs-afd-processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "5ecd0bef-fee5-428a-a587-cacab707d965",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "4f8f2932-339b-4586-a109-5692e46704e9",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "ceb92465-7cd9-4311-87e7-72b5ae6a38ee",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "0a9789df-2f68-4e51-9d89-53cef724d850",
    "metadata": {},
    "outputs": [
@@ -199,7 +199,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "653f8389-70d6-4849-bd17-3fe9446396f6",
    "metadata": {},
    "outputs": [
@@ -227,7 +227,7 @@
        "Name: acq_date, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "970c512c-b095-40ff-b971-fb4beb7968b9",
    "metadata": {},
    "outputs": [
@@ -253,7 +253,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "73de4225-ac37-468b-93ee-384ed4f8fed7",
    "metadata": {},
    "outputs": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "74507701-7088-4739-91c8-39be8ca04834",
    "metadata": {},
    "outputs": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "5d39b7ce-792b-456a-a0d1-2a4f197b8997",
    "metadata": {},
    "outputs": [
@@ -441,7 +441,7 @@
        "56     56  DOE CANYON       2019 2019-06-27"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "c7f4b666-2169-4a3c-9d24-8b5bbb4e3c34",
    "metadata": {},
    "outputs": [
@@ -469,7 +469,7 @@
        "0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "92572a92-f78c-4b0b-b4fd-e4ca80ca50e6",
    "metadata": {},
    "outputs": [
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "b987d274-1224-467b-9aa8-955a944e417c",
    "metadata": {},
    "outputs": [
@@ -529,7 +529,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "8a225da1-763c-45a3-98f8-67257c44fa83",
    "metadata": {},
    "outputs": [
@@ -558,7 +558,7 @@
        "Name: count, dtype: float64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "ebd27e24-0c46-4105-9033-8e7ecf74191d",
    "metadata": {},
    "outputs": [
@@ -593,7 +593,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
+   "id": "6eda8584-5d50-45be-a8ad-4c3985634adf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    115352.000000\n",
+       "mean         23.503351\n",
+       "std          55.113332\n",
+       "min           0.000000\n",
+       "25%           2.277179\n",
+       "50%           5.789765\n",
+       "75%          19.002354\n",
+       "max        1909.182000\n",
+       "Name: frp, dtype: float64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "afds_ll_fire_ct['frp'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "00c7dbb2-da94-4e8b-befc-cc21021f84a9",
    "metadata": {},
    "outputs": [
@@ -613,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "bf4ac45e-4416-4247-81d8-d499d70acce6",
    "metadata": {},
    "outputs": [
@@ -652,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "28fb5f44-037e-4433-b44c-906f8e745a98",
    "metadata": {},
    "outputs": [
@@ -858,7 +887,7 @@
        "[5 rows x 47 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -888,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "4b7522a5-77cc-408d-9d54-bf51660d36ec",
    "metadata": {},
    "outputs": [
@@ -910,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "dca44746-57c1-4122-8046-ca2b58c4565b",
    "metadata": {},
    "outputs": [
@@ -920,7 +949,7 @@
        "115352"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -931,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "8daab39e-f3b8-485f-a617-3ae0409b4572",
    "metadata": {},
    "outputs": [
@@ -952,7 +981,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -963,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "id": "a940b3cb-7702-48c3-bbf8-397847489dba",
    "metadata": {},
    "outputs": [
@@ -1043,7 +1072,7 @@
        "4 2019-06-27      2006 2019-06-27 14:06:00-06:00      Day"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1058,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "id": "b1ae7f7c-be2f-4179-ab96-9145dbc458ba",
    "metadata": {},
    "outputs": [
@@ -1083,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "id": "3c154fab-3ab9-4d3d-856b-34c2a1fc018d",
    "metadata": {},
    "outputs": [
@@ -1134,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "id": "0425f330-757c-471d-b396-a686015083dd",
    "metadata": {},
    "outputs": [
@@ -1152,7 +1181,7 @@
        "0"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1216,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 29,
    "id": "de86a71c-2ec9-49aa-acea-257fbd78ea8d",
    "metadata": {},
    "outputs": [
@@ -1276,7 +1305,7 @@
        "2  6.081448  42.680268  0.142489"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1289,7 +1318,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 30,
+   "id": "d9f82cb7-ea5d-4b8d-98ba-ea5431878334",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    101993.000000\n",
+       "mean        111.229721\n",
+       "std         258.244779\n",
+       "min           0.000000\n",
+       "25%          10.831275\n",
+       "50%          27.262728\n",
+       "75%          88.907713\n",
+       "max        8913.220632\n",
+       "Name: frp_wkm2, dtype: float64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "afds_pix_['frp_wkm2'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "id": "6a01fbb0-4a2e-4164-a0f6-bee2e5e01a4c",
    "metadata": {},
    "outputs": [
