--- a/Aim2/code/Python/04aGEE-TreeMap.ipynb
+++ b/Aim2/code/Python/04aGEE-TreeMap.ipynb
@@ -12,13 +12,6 @@
      "text": [
       "Success\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "*** Earth Engine *** Share your feedback by taking our Annual Developer Satisfaction Survey: https://google.qualtrics.com/jfe/form/SV_0JLhFqfSY1uiEaW?source=Init\n"
-     ]
     }
    ],
    "source": [
@@ -57,17 +50,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e5b64fa6-5af1-4a47-a080-a4d5e1230516",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <style>\n",
+       "                .geemap-dark {\n",
+       "                    --jp-widgets-color: white;\n",
+       "                    --jp-widgets-label-color: white;\n",
+       "                    --jp-ui-font-color1: white;\n",
+       "                    --jp-layout-color2: #454545;\n",
+       "                    background-color: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-dark .jupyter-button {\n",
+       "                    --jp-layout-color3: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab {\n",
+       "                    background-color: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab .jupyter-button {\n",
+       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "            </style>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# load and prep the USFS TreeMap"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "2bb6337a-2892-4b52-8ce5-6f763d39978c",
    "metadata": {},
    "outputs": [
@@ -122,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "3e233744-4e7a-4bf6-ae31-a94514e1222d",
    "metadata": {},
    "outputs": [
@@ -166,7 +194,7 @@
        "['FORTYPCD', 'BALIVE', 'SDIPCT_RMRS', 'STANDHT', 'TPA_LIVE', 'TPA_DEAD']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "86beca6b-7c09-4024-97d7-0d53b93426b7",
    "metadata": {},
    "outputs": [
@@ -552,10 +580,10 @@
        "}</script></div>"
       ],
       "text/plain": [
-       "<ee.imagecollection.ImageCollection at 0x14ee1dc90>"
+       "<ee.imagecollection.ImageCollection at 0x14a01b0a0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "cee879a5-f053-496f-8148-ad1b57c23331",
    "metadata": {},
    "outputs": [
@@ -668,7 +696,7 @@
        "4       105                       Eastern hemlock"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "ee42bd24-eced-42de-bfdc-a0f9c4671713",
    "metadata": {},
    "outputs": [
@@ -744,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "fd254ec9-778e-4ca8-80d3-28cc487bb8da",
    "metadata": {},
    "outputs": [
@@ -823,17 +851,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "6033582d-275e-4cec-bf8f-85c988acd334",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <style>\n",
+       "                .geemap-dark {\n",
+       "                    --jp-widgets-color: white;\n",
+       "                    --jp-widgets-label-color: white;\n",
+       "                    --jp-ui-font-color1: white;\n",
+       "                    --jp-layout-color2: #454545;\n",
+       "                    background-color: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-dark .jupyter-button {\n",
+       "                    --jp-layout-color3: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab {\n",
+       "                    background-color: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab .jupyter-button {\n",
+       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "            </style>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# load the gridded FRP data for aspen fires"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "52e2e54e-d691-4288-aa90-06f4ef8b4ec5",
    "metadata": {},
    "outputs": [
@@ -888,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "85b998da-9146-488e-b5f6-c9f2d51aee69",
    "metadata": {},
    "outputs": [
@@ -1033,10 +1096,10 @@
        "}</script></div>"
       ],
       "text/plain": [
-       "<ee.featurecollection.FeatureCollection at 0x14ee1dd80>"
+       "<ee.featurecollection.FeatureCollection at 0x14a01bc70>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1055,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "e2b85b52-999e-42c6-b14e-1d74d00fdaa3",
    "metadata": {},
    "outputs": [
@@ -1100,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "5d8bebb2-e0eb-4db9-9dcd-ab3c8c953cdc",
    "metadata": {},
    "outputs": [
@@ -1141,12 +1204,13 @@
    ],
    "source": [
     "constant = ee.Image.constant(1) # creates a constant image\n",
-    "constant = constant.reproject(treemap.mosaic().projection()) # scale to treemap projection"
+    "constant = constant.reproject(treemap.mosaic().projection()) # scale to treemap projection\n",
+    "constant_forest = constant.updateMask(treemap.select('FORTYPCD').mosaic().gt(0)) # forest constant"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "9bf6a803-49d4-40cf-a933-944ce97675d7",
    "metadata": {},
    "outputs": [
@@ -1211,6 +1275,12 @@
     "        scale=30\n",
     "    ).get('constant')\n",
     "\n",
+    "    total_forest = constant_forest.reduceRegion(\n",
+    "        reducer=ee.Reducer.sum(),\n",
+    "        geometry=ftr.geometry(),\n",
+    "        scale=30\n",
+    "    ).get('constant')\n",
+    "\n",
     "    sp_hist_json = ee.Dictionary(sp_hist).map(\n",
     "        lambda key, value: ee.String(key).cat(':').cat(ee.Number(value).format())\n",
     "    ).values().join(', ')\n",
@@ -1218,7 +1288,8 @@
     "    # return the histogram dictionary without unpacking\n",
     "    return ftr.set({\n",
     "        'species_histogram': sp_hist_json,\n",
-    "        'total_pixels': total_pixels\n",
+    "        'total_pixels': total_pixels,\n",
+    "        'forest_pixels': total_forest\n",
     "    })\n",
     "\n",
     "# map across gridcells\n",
@@ -1239,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "654f0c44-8700-415c-ba23-31c2e3dfab12",
    "metadata": {},
    "outputs": [
@@ -1280,10 +1351,14 @@
     {
      "data": {
       "text/plain": [
-       "['total_pixels', 'species_histogram', 'system:index', 'grid_index']"
+       "['forest_pixels',\n",
+       " 'total_pixels',\n",
+       " 'species_histogram',\n",
+       " 'system:index',\n",
+       " 'grid_index']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1294,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "f6b6cf96-49dc-47fc-9d6d-5febee2dfc96",
    "metadata": {},
    "outputs": [
@@ -1353,6 +1428,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>forest_pixels</th>\n",
        "      <th>grid_index</th>\n",
        "      <th>species_histogram</th>\n",
        "      <th>total_pixels</th>\n",
@@ -1361,30 +1437,35 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>107.062745</td>\n",
        "      <td>919906</td>\n",
        "      <td>182:3.0941176470588236, 185:7.0, 221:41.768627...</td>\n",
        "      <td>196.949020</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>138.062745</td>\n",
        "      <td>919907</td>\n",
        "      <td>182:9.227450980392156, 221:75.02745098039216, ...</td>\n",
        "      <td>197.176471</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>93.403922</td>\n",
        "      <td>919908</td>\n",
        "      <td>182:15.611764705882354, 185:10.996078431372549...</td>\n",
        "      <td>196.960784</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>157.862745</td>\n",
        "      <td>922166</td>\n",
        "      <td>182:8.36078431372549, 184:16.83137254901961, 1...</td>\n",
        "      <td>197.176471</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>147.317647</td>\n",
        "      <td>922171</td>\n",
        "      <td>182:9.768627450980393, 184:2.0, 185:4.05098039...</td>\n",
        "      <td>197.466667</td>\n",
@@ -1394,15 +1475,22 @@
        "</div>"
       ],
       "text/plain": [
-       "   grid_index                                  species_histogram  total_pixels\n",
-       "0      919906  182:3.0941176470588236, 185:7.0, 221:41.768627...    196.949020\n",
-       "1      919907  182:9.227450980392156, 221:75.02745098039216, ...    197.176471\n",
-       "2      919908  182:15.611764705882354, 185:10.996078431372549...    196.960784\n",
-       "3      922166  182:8.36078431372549, 184:16.83137254901961, 1...    197.176471\n",
-       "4      922171  182:9.768627450980393, 184:2.0, 185:4.05098039...    197.466667"
+       "   forest_pixels  grid_index  \\\n",
+       "0     107.062745      919906   \n",
+       "1     138.062745      919907   \n",
+       "2      93.403922      919908   \n",
+       "3     157.862745      922166   \n",
+       "4     147.317647      922171   \n",
+       "\n",
+       "                                   species_histogram  total_pixels  \n",
+       "0  182:3.0941176470588236, 185:7.0, 221:41.768627...    196.949020  \n",
+       "1  182:9.227450980392156, 221:75.02745098039216, ...    197.176471  \n",
+       "2  182:15.611764705882354, 185:10.996078431372549...    196.960784  \n",
+       "3  182:8.36078431372549, 184:16.83137254901961, 1...    197.176471  \n",
+       "4  182:9.768627450980393, 184:2.0, 185:4.05098039...    197.466667  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1416,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "905daa27-3d4e-44c0-ac16-7e8c047e96fc",
    "metadata": {},
    "outputs": [
@@ -1791,7 +1879,7 @@
        "[10 rows x 22 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
