--- a/Aim2/code/Python/03c_viirs-afd-processing.ipynb
+++ b/Aim2/code/Python/03c_viirs-afd-processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "id": "5ecd0bef-fee5-428a-a587-cacab707d965",
    "metadata": {},
    "outputs": [
@@ -2390,12 +2390,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6e8c1833-3140-4a3c-991c-3f13ad2e2b5a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['grid_index', 'Fire_ID', 'afd_count', 'max_date', 'first_obs',\n",
+       "       'last_obs', 'Fire_Year', 'Ig_Date', 'Last_Date', 'geometry'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# create a dissolved gridcell area for gridmet calculations\n"
+    "# create a dissolved gridcell area for gridmet calculations\n",
+    "fp = os.path.join(projdir,'data/earth-engine/imports/viirs_snpp_jpss1_afd_latlon_aspenfires_pixar_gridstats.shp')\n",
+    "grid_gee = gpd.read_file(fp)\n",
+    "grid_gee.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3ddb11dc-0a55-4168-ae67-049f1f6d14fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Fire_ID', 'first_obs', 'geometry', 'grid_index', 'afd_count',\n",
+       "       'max_date', 'last_obs', 'Fire_Year', 'Ig_Date', 'Last_Date'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Dissolve by first_obs\n",
+    "grid_gee_dis = grid_gee.dissolve(by=['Fire_ID','first_obs'])\n",
+    "# Reset the index to make `first_obs` a regular column\n",
+    "grid_gee_dis = grid_gee_dis.reset_index()\n",
+    "grid_gee_dis.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d5a777b3-0eb3-424c-9efb-52431a89785e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exported layer to: /Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/earth-engine/imports/viirs_snpp_jpss1_afd_latlon_aspenfires_pixar_gridstats_dis.shp\n"
+     ]
+    }
+   ],
+   "source": [
+    "out_fp = os.path.join(projdir,'data/earth-engine/imports/viirs_snpp_jpss1_afd_latlon_aspenfires_pixar_gridstats_dis.shp')\n",
+    "grid_gee_dis.to_file(out_fp)\n",
+    "print(f\"Exported layer to: {out_fp}\")"
    ]
   }
  ],
