--- a/Aim2/code/Python/04GEE-Severity-CBI.ipynb
+++ b/Aim2/code/Python/04GEE-Severity-CBI.ipynb
@@ -853,6 +853,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def remove_geometry(ftr):\n",
+    "    return ftr.setGeometry(null)\n",
+    "results = results.map(remove_geometry)\n",
+    "\n",
     "# export table to Drive.\n",
     "export_task = ee.batch.Export.table.toDrive(\n",
     "    collection=cbi_stats,\n",
